<resources>
    <string name="app_name">MoviesWatch</string>
    <string name="_test">test</string>

    <!-- Add movies activity -->
    <string name="descriptionOnAddMovie">Description</string>
    <string name="genreOnAddMovie">Genre</string>
    <string name="titleOnAddMovie">Title</string>
    <string name="btnSaveOnAddMovie">SAVE</string>
    <string name="title_add_movie">Add movie</string>
    <string name="title_edit_movie">Edit movie</string>

    <!-- Recycler view item -->
    <string name="item_on_list_delete">Delete</string>
    <string name="item_on_list_edit">Edit</string>
    <string name="item_on_list_rating">Rating</string>

    <!-- Add movies activity-->
    <string name="title_activity_settings">Settings</string>

    <string name="about_title">About</string>
    <string name="about_msg">MoviesWatch is your digital notebook in which you can search, find and add at any time any name of any movie that you want to watch.</string>
    <string name="about_web_link">Link to program code: <a href="https://github.com/Selfvsself/MoviesWatch">https://github.com/Selfvsself/MoviesWatch</a></string>
    <string name="about_email">Send feedback and comments to the mail: killerman323@gmail.com</string>
    <string name="dialog_btn_ok">OK</string>
</resources>
