<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/rect_background_recycler_card"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_padding"
        android:paddingTop="@dimen/big_padding"
        android:text="@string/about_title"
        android:textColor="@color/colorMainText"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_padding"
        android:text="@string/about_msg"
        android:textColor="@color/colorSecondText"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/about_text_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_padding"
        android:text="@string/about_web_link"
        android:textColor="@color/colorSecondText"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_padding"
        android:text="@string/about_email"
        android:textColor="@color/colorSecondText"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/btn_dialog_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="@dimen/standard_padding"
        android:background="@drawable/ripple_recycler_card"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/big_padding"
        android:text="@string/dialog_btn_ok"
        android:textColor="@color/colorSecondText" />

</LinearLayout>