<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/standard_padding">

                <ImageButton
                    android:id="@+id/buttonCancel"
                    android:layout_width="36dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ripple_appbar"
                    android:src="@drawable/ic_clear_24dp" />

                <TextView
                    android:id="@+id/titleOnAddActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/title_add_activity_horizontal"
                    android:layout_marginEnd="@dimen/title_add_activity_horizontal"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:paddingTop="@dimen/title_add_activity_vertical"
                    android:paddingBottom="@dimen/title_add_activity_vertical"
                    android:text="@string/title_add_movie"
                    android:textColor="@color/colorMainText"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/buttonSave"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0"
                    android:background="@drawable/ripple_appbar"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:padding="@dimen/standard_padding"
                    android:text="@string/btnSaveOnAddMovie"
                    android:textColor="@color/colorFloatButton2"
                    android:textSize="14sp" />
            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context=".View.AddMovieActivity">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textTitleInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_padding"
                android:hint="@string/titleOnAddMovie"
                android:textColorHint="@color/colorSecondText"
                app:hintTextAppearance="@style/MyHintText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="@color/colorMainText"
                    android:textSize="16sp"
                    android:theme="@style/MyEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_padding"
                android:hint="@string/genreOnAddMovie"
                android:textColorHint="@color/colorSecondText"
                app:hintTextAppearance="@style/MyHintText">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/inputGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="@color/colorMainText"
                    android:textSize="16sp"
                    android:theme="@style/MyEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_padding"
                android:hint="@string/descriptionOnAddMovie"
                android:textColorHint="@color/colorSecondText"
                app:hintTextAppearance="@style/MyHintText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorMainText"
                    android:textSize="16sp"
                    android:theme="@style/MyEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_padding"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/_test"
                android:textColor="@color/colorMainText"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/textViewAssessment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_padding"
                android:layout_marginBottom="@dimen/big_padding"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/_test"
                android:textColor="@color/colorSecondText"
                android:textSize="16sp" />

            <SeekBar
                android:id="@+id/seekBar"
                style="@style/Widget.AppCompat.SeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="5"
                android:paddingTop="@dimen/big_padding"
                android:paddingBottom="@dimen/big_padding"
                android:progress="3" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>